# Auto-Bot

./: README.fr.md  README.md  index.html  install - DEV.bat  install.bat  package.json  settings.json  vite.config.ts
Localization/: EN_en.json  FR_fr.json
public/: overlay.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Localization/: EN_en.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/blocks/: mod.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/overlay/: mod.rs  overlay.html
src/components/: AboutModal.tsx  AnimatedEdge.tsx  CmdHistoryModal.tsx  Console.tsx  DebugConsole.tsx  ForNode.tsx  FunctionArgsNode.tsx  FunctionCallNode.tsx  FunctionReturnNode.tsx  HelpModal.tsx  HistoryNode.tsx  IfNode.tsx  Inspector.tsx  KeyboardModal.tsx  LogPanel.tsx  MacroBlockNode.tsx  MathNode.tsx  MenuBar.tsx  RandomNode.tsx  SettingsModal.tsx  SmartInput.tsx  StartNode.tsx  SwitchNode.tsx  TabBar.tsx  Toolbar.tsx  VarPanel.tsx
src/store/: editorStore.ts
src/types/: blocks.ts
